# carmichael-numbers-order-2

./: .gitignore  CMakeLists.txt  Makefile  README.md  ZZPrinter.py  bench_test.cpp  construct_P.cpp  counting_factors.cpp  counting_factors.h  gen_distributions.cpp  generate_cprimes.cpp  generate_cprimes_order_2.cpp  nonrigid_first  notes  old-makefile  primality.cpp  run.sh  timer.cpp  timer.h  util.cpp  util.h
benchmarks/0/: bdata.json  notes
benchmarks/1/: b1.json  b2.json
cache/: index
cache/0/: a_values  primes
cache/1/: a_values  primes
cache/2/: a_values  primes
cache/3/: a_values  primes
cache/5/: primes
cache/6/: a_values  primes
cache/7/: a_values  primes
data/: 0
include/: config.h  construct_P.h  counting_factors.h  nonrigid.h  primality.h  subset_product.h  timer.h  util.h
include/strategy_1/: nonrigid.h
include/strategy_2/: nonrigid.h  subset_product.h
plots/: summary
plots/5/: sorted_summary  summary
scripts/: L-search-job.sh  ZZPrinter.py  batch  bench_lineplot.py  bench_plot.py  clean.sh  gen_all_powers.py  genjobdata.sh  genjobdata2.sh  job.sh  p2_1_plot.py  parse.sh  plot.py  test.py
src/: CMakeLists.txt  bench_construct_P.cpp  calc_density.cpp  calc_density_batch.cpp  construct_P.cpp  construct_P_main.cpp  counting_factors.cpp  gen_nonrigid.cpp  generate_cprimes.cpp  generate_cprimes_order_2.cpp  nonrigid.cpp  p2_1.cpp  pnonrigid.cpp  subset_product.cpp  timer.cpp  util.cpp
src/benchmarks/: bench_construct_P.cpp  bench_lambda.cpp  bench_prodcache.cpp
src/strategy_1/: gen_nonrigid.cpp  nonrigid.cpp  pnonrigid.cpp
src/strategy_2/: CMakeLists.txt  all_possible_nonrigid_pairs.cpp  gen_nonrigid.cpp  nonrigid.cpp  subset_product.cpp  test_howe.cpp
src/tests/: test_binomial.cpp  test_eulers_toitent.cpp  test_factorize_slow.cpp  test_rand_subset.cpp  test_subsetprod_mod.cpp
(+45 files in other folders)
